Fixed Alignment on Top of Todolist. Added 'Add Task' Button.

--- a/static/style.css
+++ b/static/style.css
@@ -2,10 +2,12 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-color: rgb(155, 148, 148);
 }
 .banner-card{
     text-align: center;
+    position: relative;
 }
 .banner-card > h1{
     color: whitesmoke;
@@ -14,22 +16,31 @@ body{
     position: relative;
     color: linear-gradient(red, yellow);
     display: flex;
-    flex-direction: row;
-    
-    
+    justify-content: space-between;
+    padding-left: 50px;
+    padding-right: 50px;
+    align-items: flex-end;
+
+
 }
 .banner-content img{
-    width: 15%;
-    height: 15%;
+    width: 20%;
+    height: 20%;
+    position: relative;
+    display: flex;
+    align-self: flex-end;
+    margin-bottom: 5px;
+    
 }
 .banner-content p{
     color: antiquewhite;
+    position: relative;
+    line-height: 0px;
     align-self: flex-end;
-    position: absolute;
-    top: 70%;
-    left: 80%
+    
 }
 .banner-content .bigger{
+    font-size: 100px;
 }
 .xp-bar{
     border-bottom: 3px solid #CCDBDC;
@@ -47,6 +58,7 @@ body{
     border: 3px;
     width: 600px;
     margin:auto ;
+    position: relative;
     /* border-radius: 12px; */
 }
 .wrapper-content{
@@ -66,6 +78,8 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
 
     overflow: hidden;
 }
@@ -81,9 +95,15 @@ body{
     
 }
 .accordion-header{
-    cursor: pointer;
+    display: flex;
+    position: relative;
+    /* cursor: pointer; */
+    height:50px;
+    text-align: start;
+    align-items: center ;
+
 }
-.accordion-header::after{
+.accordion-header p::after{
     text-align: center;
     content: "5";
     height: 20px;
@@ -92,6 +112,25 @@ body{
     border-radius: 50%;
     display: inline-block;
 }
+.add-task-button{
+    position: absolute;
+    height:50px;
+    width:50px;
+    border-radius: 100%;
+    background-color: green;
+    bottom:20px;
+    right:20px;
+
+    cursor: pointer;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+
+    color: whitesmoke;
+    font-weight: bold;
+}
 .accordion-content{
     max-height: 0;
     overflow: hidden;
@@ -99,4 +138,36 @@ body{
 }
 .accordion-header.active +  .accordion-content {
     max-height: 300px;
+}
+
+
+
+
+.popup-bg{
+    display: none;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.603);
+    /* cursor: pointer; */
+    position:absolute;
+    display:flex;    
+    align-items: center;
+    justify-content: center;
+    top: 0%;
+    z-index: 2;
+}
+
+.popup-content{
+    height: auto;
+    width: 600px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    z-index: 3;
+}
+.task-row{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 10px;
 }
